// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timer > props > should render with prop color 1`] = `
<time
  color="#fff"
  datetime="00:00"
>
  00:00
</time>
`;

exports[`Timer > props > should render with prop remaining 1`] = `
<time
  datetime="00:00"
>
  -00:00
</time>
`;

exports[`Timer > props > should render with prop time 1`] = `
<time
  datetime="00:00"
>
  00:00
</time>
`;

exports[`Timer > props > should render without props 1`] = `
<time
  datetime="00:00"
>
  00:00
</time>
`;
